--- a/package.json
+++ b/package.json
@@ -3,9 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.6.0",
-    "react-dom": "^16.6.0",
-    "react-scripts": "3.1.0"
+    "@apollo/client": "^3.4.7",
+    "apollo-client": "^2.6.10",
+    "graphql": "^15.5.1",
+    "react": "^17.0.0",
+    "react-dom": "^17.0.0",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "^4.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
